--- a/apps/peertube/nonroot/Dockerfile
+++ b/apps/peertube/nonroot/Dockerfile
@@ -14,7 +14,7 @@ ARG ALREADY_BUILT=0
 
 # Install dependencies
 RUN apt update \
- && apt install -y --no-install-recommends openssl ffmpeg python3 python3-pip ca-certificates gnupg gosu build-essential curl git \
+ && apt install -y --no-install-recommends fish openssl ffmpeg python3 python3-pip ca-certificates gnupg gosu build-essential curl git \
  && gosu nobody true \
  && rm /var/lib/apt/lists/* -fR
 
