--- a/apps/autopulse/ci/goss.yaml
+++ b/apps/autopulse/ci/goss.yaml
@@ -4,13 +4,13 @@ process:
   autopulse:
     running: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:2875:
-    listening: true
+# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp6:2875:
+#     listening: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-http:
-  http://localhost:2875:
-    status: 200
+# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
+# http:
+#   http://localhost:2875:
+#     status: 200
