--- a/apps/autopulse/ui/goss.yaml
+++ b/apps/autopulse/ui/goss.yaml
@@ -1,14 +1,9 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-process:
-  node:
-    running: true
+# process:
+#   node:
+#     running: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:2880:
-    listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
