prepare for aiostreams v2
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/aiostreams/Dockerfile
+++ b/apps/aiostreams/Dockerfile
@@ -1,11 +1,18 @@
-# Get upstream code
-FROM alpine:latest as cloner
+# Get upstream code - we use node in this case
+# we need node in this case for the metadata script
+FROM node:22-alpine as cloner
 ARG VERSION
 
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION  https://github.com/Viren070/AIOStreams.git /source
+RUN git clone -b $VERSION https://github.com/Viren070/AIOStreams.git /source
+
+WORKDIR /source
+
+# Update metadata
+RUN mkdir /resources && \
+    npm run metadata
 
 FROM node:22-alpine AS builder
 
@@ -16,32 +23,23 @@ COPY --from=cloner /source/LICENSE ./
 
 # Copy the relevant package.json and package-lock.json files.
 COPY --from=cloner /source/package*.json ./
-COPY --from=cloner /source/packages/formatters/package*.json ./packages/formatters/
-COPY --from=cloner /source/packages/parser/package*.json ./packages/parser/
-COPY --from=cloner /source/packages/types/package*.json ./packages/types/
-COPY --from=cloner /source/packages/wrappers/package*.json ./packages/wrappers/
-COPY --from=cloner /source/packages/addon/package*.json ./packages/addon/
+COPY --from=cloner /source/packages/server/package*.json ./packages/server/
+COPY --from=cloner /source/packages/core/package*.json ./packages/core/
 COPY --from=cloner /source/packages/frontend/package*.json ./packages/frontend/
-COPY --from=cloner /source/packages/utils/package*.json ./packages/utils/
 
+# Copy source files.
+COPY --from=cloner /source/tsconfig.*json ./
+COPY --from=cloner /source/packages/server ./packages/server
+COPY --from=cloner /source/packages/core ./packages/core
+COPY --from=cloner /source/packages/frontend ./packages/frontend
+COPY --from=cloner /source/scripts ./scripts
+COPY --from=cloner /source/resources ./resources
 
 # Install dependencies.
 RUN npm install
 
-# Copy source files.
-COPY --from=cloner /source/tsconfig.*json ./
-
-COPY --from=cloner /source/packages/addon ./packages/addon
-COPY --from=cloner /source/packages/formatters ./packages/formatters
-COPY --from=cloner /source/packages/parser ./packages/parser
-COPY --from=cloner /source/packages/types ./packages/types
-COPY --from=cloner /source/packages/wrappers ./packages/wrappers
-COPY --from=cloner /source/packages/frontend ./packages/frontend
-COPY --from=cloner /source/packages/utils ./packages/utils
-
-# Setup branding
-COPY apps/aiostreams/elfhosted-branding.html /tmp/elfhosted-branding.html
-RUN NEXT_PUBLIC_ELFHOSTED_BRANDING=$(cat /tmp/elfhosted-branding.html) npm run build
+# Build the project.
+RUN npm run build
 
 # Remove development dependencies.
 RUN npm --workspaces prune --omit=dev
@@ -54,25 +52,25 @@ WORKDIR /app
 # The package.json files must be copied as well for NPM workspace symlinks between local packages to work.
 COPY --from=builder /build/package*.json /build/LICENSE ./
 
-COPY --from=builder /build/packages/addon/package.*json ./packages/addon/
+COPY --from=builder /build/packages/core/package.*json ./packages/core/
 COPY --from=builder /build/packages/frontend/package.*json ./packages/frontend/
-COPY --from=builder /build/packages/formatters/package.*json ./packages/formatters/
-COPY --from=builder /build/packages/parser/package.*json ./packages/parser/
-COPY --from=builder /build/packages/types/package.*json ./packages/types/
-COPY --from=builder /build/packages/wrappers/package.*json ./packages/wrappers/
-COPY --from=builder /build/packages/utils/package.*json ./packages/utils/
+COPY --from=builder /build/packages/server/package.*json ./packages/server/
 
-
-COPY --from=builder /build/packages/addon/dist ./packages/addon/dist
+COPY --from=builder /build/packages/core/dist ./packages/core/dist
 COPY --from=builder /build/packages/frontend/out ./packages/frontend/out
-COPY --from=builder /build/packages/formatters/dist ./packages/formatters/dist
-COPY --from=builder /build/packages/parser/dist ./packages/parser/dist
-COPY --from=builder /build/packages/types/dist ./packages/types/dist
-COPY --from=builder /build/packages/wrappers/dist ./packages/wrappers/dist
-COPY --from=builder /build/packages/utils/dist ./packages/utils/dist
+COPY --from=builder /build/packages/server/dist ./packages/server/dist
+
+COPY --from=builder /build/resources ./resources
 
 COPY --from=builder /build/node_modules ./node_modules
 
-EXPOSE 3000
+HEALTHCHECK --interval=30s --timeout=5s --start-period=5s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:$PORT/api/v1/status || exit 1
 
-ENTRYPOINT ["npm", "run", "start:addon"]
+EXPOSE $PORT
+
+# These are defaults required to goss-test, and are expected to be overridden by the user.
+ENV SECRET_KEY=712376047f57a47969bd1992bcbda764db35bd2d0d9b3ddd6b291683e6755aea \
+    BASE_URL=https://example.com
+
+ENTRYPOINT ["npm", "run", "start"]
