add psql support to librespeed again
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/librespeed/Dockerfile
+++ b/apps/librespeed/Dockerfile
@@ -2,6 +2,6 @@
 FROM ghcr.io/librespeed/speedtest:latest
 
 # Install psql extension
-# RUN apt install \
-#     php-gd \
-#     php83-session
+RUN apt install \
+    php-gd \
+    php83-session
