--- a/apps/plex/Dockerfile
+++ b/apps/plex/Dockerfile
@@ -99,7 +99,8 @@ COPY ./apps/plex/transcode-killer.py /transcode-killer.py
 
 # Prepare fake analysis script
 RUN mv "/usr/lib/plexmediaserver/Plex Media Scanner" "/usr/lib/plexmediaserver/Plex Media Scanner.real"
-COPY ./apps/plex/apps/plex/fake-scanner.sh "/usr/lib/plexmediaserver/Plex Media Scanner"
-RUN chmod +x /usr/lib/plexmediaserver/Plex\ Media\ Scanner
+COPY ./apps/plex/apps/plex/fake-scanner.sh /usr/lib/plexmediaserver/
+RUN mv /usr/lib/plexmediaserver/fake-scanner.sh "/usr/lib/plexmediaserver/Plex Media Scanner" && \
+    chmod +x /usr/lib/plexmediaserver/Plex\ Media\ Scanner
 
 ENTRYPOINT [ "/init" ]
