--- a/apps/cinesync/dev/Dockerfile
+++ b/apps/cinesync/dev/Dockerfile
@@ -5,7 +5,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b CineSync-$VERSION  https://github.com/sureshfizzy/CineSync.git /source
+RUN git clone -b feature https://github.com/sureshfizzy/CineSync.git /source
 
 # ---- STAGE 1: Build WebDavHub ----
 FROM python:3.11-slim AS builder
