minor wger update for static assets
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/wger/Dockerfile
+++ b/apps/wger/Dockerfile
@@ -12,4 +12,13 @@ RUN groupadd -g ${PGID} elfie && \
     useradd -u ${PUID} -g elfie -d /home/wger -s /bin/bash elfie && \
     chown elfie:elfie /home/wger -R
 
+# Prepare for symlinks for static assets
+RUN mkdir /config/static && \
+    mkdir /config/media && \
+    rm /home/wger/static && \
+    rm /home/wger/media && \
+    ln -s /config/static /home/wger/static && \
+    ln -s /config/media /home/wger/media && \
+    chown elfie:elfie /config -R
+
 USER elfie
