--- a/apps/elf-discord-bot/Dockerfile
+++ b/apps/elf-discord-bot/Dockerfile
@@ -47,6 +47,9 @@ COPY --from=cloner /source/docker-entrypoint.sh ./
 RUN chmod +x docker-entrypoint.sh && \
     chown -R nodejs:nodejs /app
 
+ARG ZURG_GH_CREDS
+RUN git clone https://$ZURG_GH_CREDS@github.com/jamcalli/elf-discord-bot.git /source
+
 # Switch to non-root user
 USER nodejs
 
