--- a/apps/rating-aggregator/ci/goss.yaml
+++ b/apps/rating-aggregator/ci/goss.yaml
@@ -1,10 +1,10 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  python:
+  npm:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
-  http://localhost:5000:
+  http://localhost:3000:
     status: 200
