--- a/apps/rating-aggregator/Dockerfile
+++ b/apps/rating-aggregator/Dockerfile
@@ -23,9 +23,10 @@ RUN cd frontend && npm ci
 COPY --from=cloner /source/frontend ./frontend
 
 # Inject VITE_HOME_BLURB into Vite
-RUN printf "VITE_HOME_BLURB=%s\n" "${VITE_HOME_BLURB}" > frontend/.env.production \
-&& echo "--- frontend/.env.production contents ---" \
-&& cat frontend/.env.production
+COPY apps/rating-aggregator/blurb.env frontend/.env.production
+# RUN printf "VITE_HOME_BLURB=%s\n" "${VITE_HOME_BLURB}" > frontend/.env.production \
+# && echo "--- frontend/.env.production contents ---" \
+# && cat frontend/.env.production
 
 RUN cd frontend && npm run build
 
