--- a/apps/rating-aggregator/ci/goss.yaml
+++ b/apps/rating-aggregator/ci/goss.yaml
@@ -1,7 +1,7 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  npm:
+  node:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
