--- a/apps/icons/Dockerfile
+++ b/apps/icons/Dockerfile
@@ -1,5 +1,6 @@
 FROM nginxinc/nginx-unprivileged:alpine3.22-slim
 
+WORKDIR /tmp
 RUN wget https://github.com/walkxcode/dashboard-icons/archive/refs/heads/main.zip && \
 	unzip main.zip && \
 	mv dashboard-icons-main/png /usr/share/nginx/html/ && \
