prevent users accidenatlly changing cinesync's api port or auth settings
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/cinesync/client_locked_settings.json
+++ b/apps/cinesync/client_locked_settings.json
@@ -7,6 +7,14 @@
     "MAX_PROCESSES": {
       "locked": true,
       "value": 15
+    },
+    "CINESYNC_AUTH_ENABLED": {
+      "locked": true,
+      "value": false
+    },
+    "CINESYNC_API_PORT": {
+      "locked": true,
+      "value": 8082
     }
   }
 }
