also lock UI port
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/cinesync/client_locked_settings.json
+++ b/apps/cinesync/client_locked_settings.json
@@ -19,6 +19,10 @@
     "CINESYNC_API_PORT": {
       "locked": true,
       "value": 8082
-    }
+    },
+    "CINESYNC_UI_PORT": {
+      "locked": true,
+      "value": 5183
+    }    
   }
 }
