--- a/apps/emby/Dockerfile
+++ b/apps/emby/Dockerfile
@@ -84,4 +84,21 @@ RUN \
 USER 568
 COPY --from=builder /app/emby /app/emby
 COPY ./apps/emby/entrypoint.sh /entrypoint.sh
-CMD ["/entrypoint.sh"]
+
+
+# Add s6
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
+RUN tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-x86_64.tar.xz /tmp
+RUN tar -C / -Jxpf /tmp/s6-overlay-x86_64.tar.xz
+RUN chown -R elfie:elfie /run
+
+COPY --chown=568:568 apps/plex/root /
+
+USER 568
+LABEL org.opencontainers.image.source="https://github.com/jellyfin/jellyfin"
+
+COPY ./apps/plex/transcode-killer.py /transcode-killer.py
+COPY ./apps/plex/mount-checker.sh /mount-checker.sh
+
+ENTRYPOINT [ "/init" ]
