--- a/apps/jellyfin/Dockerfile
+++ b/apps/jellyfin/Dockerfile
@@ -4,6 +4,7 @@ ARG TARGETPLATFORM
 ARG BUILDPLATFORM
 ARG VERSION
 ARG CHANNEL
+ENV S6_OVERLAY_VERSION=3.2.0.0
 
 ENV NVIDIA_DRIVER_CAPABILITIES="compute,video,utility"
 
@@ -61,8 +62,29 @@ RUN \
         /var/tmp/ \
     && printf "umask %d" "${UMASK}" >> /etc/bash.bashrc
 
+# Replace malloc with jemalloc
+RUN apt-get -qq update \
+    && apt-get -qq install -y libjemalloc2 libjemalloc-dev 
+ENV LD_PRELOAD="/usr/lib/x86_64-linux-gnu/libjemalloc.so.2"
+
+# Add s6
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
+RUN tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-x86_64.tar.xz /tmp
+RUN tar -C / -Jxpf /tmp/s6-overlay-x86_64.tar.xz
+RUN chown -R elfie:elfie /run
+
+COPY --chown=568:568 apps/plex/root /
+
 USER 568
 COPY ./apps/jellyfin/entrypoint.sh /entrypoint.sh
-CMD ["/entrypoint.sh"]
+# CMD ["/entrypoint.sh"]
 
 LABEL org.opencontainers.image.source="https://github.com/jellyfin/jellyfin"
+
+COPY ./apps/jellyfin/entrypoint.sh /entrypoint.sh
+COPY ./apps/plex/transcode-killer.py /transcode-killer.py
+COPY ./apps/plex/mount-checker.sh /mount-checker.sh
+
+ENTRYPOINT [ "/init" ]
+
