--- a/apps/jellyfin/dev/Dockerfile
+++ b/apps/jellyfin/dev/Dockerfile
@@ -17,7 +17,7 @@ RUN \
     apt-get -qq update \
     && \
     apt-get -qq install -y \
-        gnupg2 \
+        gnupg2 python3 xz-utils \
     && \
     case "${TARGETPLATFORM}" in \
         'linux/amd64') \
