--- a/apps/emby/Dockerfile
+++ b/apps/emby/Dockerfile
@@ -22,7 +22,7 @@ RUN \
     && \
     apt-get update -qq \
     && \
-    apt-get install -qqy cpio rpm2cpio python3 xz-utils \
+    apt-get install -qqy cpio rpm2cpio \
     && \
     mkdir -p /app/emby \
     && \
@@ -69,7 +69,7 @@ RUN \
     esac \
     && \
     apt-get update -qq && \
-    apt-get install -qqy ${EXTRA_INSTALL_ARG} \
+    apt-get install -qqy python3 xz-utils ${EXTRA_INSTALL_ARG} \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
     && apt-get autoremove -y \
     && apt-get clean \
