--- a/apps/booklore/Dockerfile
+++ b/apps/booklore/Dockerfile
@@ -40,7 +40,7 @@ COPY --from=springboot-build /springboot-app/build/libs/booklore-api-0.0.1-SNAPS
 # In ElfHosted, we can only mount a single config volume to the container, which presents a problem for 
 # Booklore's bookdrop volumes. This is a dirty workaround to avoid surprising the user..
 RUN rm -rf /bookdrop && \
-    mkdir /config/bookdrop && \
+    mkdir -p /config/bookdrop && \
     ln -s /config/* /
 
 EXPOSE 8080 80
